@@ -11,7 +11,7 @@ jobs:
       - name: Test and build
         run: |
           cpanm --quiet --notest ExtUtils::MakeMaker Test::Pod Test::Pod::Coverage parent
-          cpanm --quiet --notest File::ShareDir::Install XML::XPath DBM::Deep Digest::MD5
+          cpanm --quiet --notest File::ShareDir::Install XML::XPath DBM::Deep
           cpanm --quiet --notest File::Find::Rule Spreadsheet::XLSX Text::CSV_XS LWP::Protocol::https
           cpanm --quiet --notest --installdeps .
           perl Makefile.PL
